split routes into controllers
